Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
Installer 386
Mac 10.7 and 10.8
-
-
3a75e2f227810d75adc22d426fcab1355611adee
Description
The print option does not work properly in Qt Assistant. First I did not succeed to print at all:
0 - Open a help page
1 - click the print icon or select File->Print menu
2 - The print dialog opens
3 - Select print to printer and click Print
=> Problem nothing is printed
4 - Select Save as PDF and save
=> Problem no pdf file is created
Then I restarted Qt Assistant and I was able to print. However I encountered a seg fault following the steps:
0 - Open a help page
1 - select File->Print menu
2 - The print dialog opens
3 - Select Save as PDF and save
4 - the pdf file is created
5 - Select File->Print menu again
=> The application crashes (see trace in attached assistant_print_386.txt)
Attachments
For Gerrit Dashboard: QTBUG-28657 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
43097,1 | Initalize the printinfo on Mac if it requests and it needs initalizing | stable | qt/qtbase | Status: MERGED | +2 | 0 |
43113,1 | Initalize the printinfo on Mac if it requests and it needs initalizing | release | qt/qtbase | Status: MERGED | +2 | 0 |